fixes ITC-456: Fixed vertical spacing issue on wrapped page titles

--- a/style.css
+++ b/style.css
@@ -798,7 +798,7 @@ div.featured_container div.featured_image {
 h1.entry-title {
     font-weight: bold;
     font-size: 24px;
-    line-height: 24px;
+    line-height: 28px;
     margin-top: 0px;
 }
 
